<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="horizontal"
                android:padding="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/student"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/student_text_view"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/submit" />

            </LinearLayout>

            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="336dp"
                android:layout_height="165dp"
                android:gravity="center|start"
                android:padding="15dp"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="365dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/A_button"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/a" />

                    <TextView
                        android:id="@+id/answerA_text_view"
                        android:layout_width="263dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="365dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/B_button"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/b" />

                    <TextView
                        android:id="@+id/answerB_text_view"
                        android:layout_width="262dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="365dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/C_button"
                        android:layout_width="108dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/c" />

                    <TextView
                        android:id="@+id/answerC_text_view"
                        android:layout_width="262dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="365dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/D_button"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/d" />

                    <TextView
                        android:id="@+id/answerD_text_view"
                        android:layout_width="263dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="365dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/E_button"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/e">

                    </Button>

                    <TextView
                        android:id="@+id/answerE_text_view"
                        android:layout_width="263dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="290dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/prev_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/arrow_left"
                        android:drawablePadding="10dp"
                        android:text="@string/prev" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_gravity="center|end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/next_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/arrow_right"
                        android:drawablePadding="10dp"
                        android:text="@string/next" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</ScrollView>